--- a/styles.css
+++ b/styles.css
@@ -20,22 +20,23 @@ body {
 }
 
 .sidebar {
-    width: 250px;
+    width: 24vh;
     background-color: #e2e2e2;
     display: flex;
     justify-content: center;
     padding-top: 20px;
-    height: 88vh;
+    height: 87vh;
 }
 
 .sidebar-bottom {
-    width: 250px;
+    width: 24vh;
     background-color: #e2e2e2;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: end;
     padding-top: 20px;
-    height: 12vh;
+    height: 7vh;
 }
 
 .sidebar ul {
@@ -63,8 +64,8 @@ body {
 }
 
 .main-content {
-    flex: 1;
     display: flex;
+    width: calc(100% - 24vh);
     flex-direction: column;
 }
 
@@ -77,7 +78,7 @@ header {
     padding: 15px;
     text-align: end;
     font-size: 1.0rem;
-    height: 60px;
+    height: 6vh;
 }
 
 .menu-item-header {
@@ -90,6 +91,11 @@ header {
     width: 180px;
     height: 30px;
     padding: 20px;
+}
+
+.principal-container {
+    display: flex;
+    flex-direction: row;
 }
 
 .menu-item-header:hover {
@@ -106,10 +112,35 @@ header {
     .sidebar {
         width: 100%;
         height: auto;
-        position: relative;
+        padding-top: 0px;
+    }
+
+    .sidebar-bottom {
+        width: 0vh;
+        height: 0vh;
     }
 
     .main-content {
-        margin-top: 60px;
+        width: 100%;
+        height: 86vh;
+    }
+
+    .principal-container {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .sidebar {
+        align-items: center;
+        justify-content: center;
+        height: 8vh;
+    }
+
+    .sidebar ul {
+        flex-direction: row;
+    }
+
+    .sidebar ul li a {
+        width: auto;
     }
 }
