--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,16 @@
-/* Reset e Configurações Gerais */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Ubuntu', sans-serif;
+    overflow-y: hidden;
 }
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
     display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: 100vh;
-    margin: 0;
+    background-color: #f4f4f9;
 }
 
 .wrapper {
@@ -22,12 +19,10 @@ body {
     width: 100%;
 }
 
-/* Sidebar (se aplicável) */
 .sidebar {
     width: 24vh;
     background-color: #e2e2e2;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     padding-top: 20px;
     height: 87vh;
@@ -68,7 +63,6 @@ body {
     background-color: #a1a1a1;
 }
 
-/* Estilos do Contêiner Principal */
 .main-content {
     display: flex;
     width: calc(100% - 24vh);
@@ -99,8 +93,13 @@ header {
     padding: 20px;
 }
 
+.principal-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .menu-item-header:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Sombra simples */
 }
 
 .content {
@@ -109,66 +108,6 @@ header {
     flex-grow: 1;
 }
 
-/* Contêiner para input e output */
-.input_Output {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-/* Inputs */
-.inputs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    margin-top: 50px;
-}
-
-.inputs button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    width: 100px;
-    transition: background-color 0.3s;
-}
-
-.inputs button:hover {
-    background-color: #0056b3;
-}
-
-.inputs button.active {
-    background-color: #0056b3;
-}
-
-/* Outputs */
-.outputs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-}
-
-.light {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    transition: background-color 0.3s;
-}
-
-.light.active {
-    background-color: yellow;
-}
-
-/* Responsividade */
 @media (max-width: 768px) {
     .sidebar {
         width: 100%;
