--- a/Decodificadores/Decodificador_3_8/styles.css
+++ b/Decodificadores/Decodificador_3_8/styles.css
@@ -11,11 +11,21 @@ body {
 
 .container {
     background-color: #fff;
-    padding: 20px;
+    width: 1000px;
+    padding: 40px 40px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    text-align: justify;
+    align-items: center;
     position: relative;
+    display: flex;
+    gap: 14px;
+}
+
+h1 {
+    font-size: 20px;
+    margin-bottom: 40px;
+    color: #b40d0d
 }
 
 /* Contêiner principal para input e output */
