--- a/Decodificadores/Decodificador_3_8/styles.css
+++ b/Decodificadores/Decodificador_3_8/styles.css
@@ -11,12 +11,14 @@ body {
 
 .container {
     background-color: #fff;
-    width: 1000px;
+    width: 900px;
+    height: 80vh;
     padding: 40px 40px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: justify;
     align-items: center;
+    justify-self: center;
     position: relative;
     display: flex;
     gap: 14px;
