--- a/Decodificadores/Decodificador_3_8_enable/styles.css
+++ b/Decodificadores/Decodificador_3_8_enable/styles.css
@@ -5,13 +5,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
 .container {
     background-color: #fff;
-    width: 1000px;
+    width: 900px;
+    height: 87vh;
     padding: 40px 40px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
